# vigrep

./: .gitignore  LICENSE  README.md  pyproject.toml
vigrep/: __main__.py
